<resources>
    <string name="app_name">Re:Fuel</string>
    <string name="refuels_list_title">Reabastecimientos de gasolina</string>
    <string name="history_title">Historial</string>
    <string name="refuels_title">Reabastecimientos</string>
    <string name="action_settings">Settings</string>
    <string name="add_refuel">Agregar reabastecimiento</string>
    <string name="refuel_added">Reabastecimiento agregado exitosamente.</string>
    <string name="title_activity_settings">Configuración</string>

    <string name="gas_usage">Uso de gasolina</string>
    <string name="liter_quantity">Cantidad en litros</string>
    <string name="cash_payed">Monto pagado</string>
    <string name="odometer">Odómetro</string>
    <string name="price_per_liter">Precio por litro</string>

    <string name="liters"> %s Litros</string>
    <string name="liters_abbreviation"> %s lt</string>
    <string name="cash"> %s Colones</string>
    <string name="cash_abbreviation"> %s col.</string>
    <string name="kilometers"> %s Kilómetros</string>
    <string name="kilometers_abbreviation"> %s kms</string>
    <string name="days_since">Hace %s días</string>
    <string name="kilometer_per_liter"> %s Km/Litro</string>
    <string name="cash_per_liter"> %s Colones/Litro</string>
    <string name="performance_label">Rendimiento Km/l</string>
    <string name="last_refuel_label">Último reabastecimiento</string>
    <string name="date_label">Fecha</string>
    <string name="performance_analysis_label">Análisis de rendimiento</string>
    <string name="refuel_distance_label">Distancia recorrida</string>
</resources>
