<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        tools:context="info.codingalecr.refuel.views.activities.FuelItemFormActivity">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_liters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_keyline"
            android:layout_marginRight="@dimen/base_keyline"
            android:layout_marginTop="@dimen/base_keyline">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/liter_quantity"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_cash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_keyline"
            android:layout_marginRight="@dimen/base_keyline"
            android:layout_marginTop="@dimen/base_keyline">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cash_payed"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInput_kilometers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/base_keyline"
            android:layout_marginRight="@dimen/base_keyline"
            android:layout_marginTop="@dimen/base_keyline">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/odometer"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <DatePicker
            android:id="@+id/datePicker_refuel_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/base_keyline"
            android:layout_marginLeft="@dimen/base_keyline"
            android:layout_marginRight="@dimen/base_keyline"
            android:layout_marginStart="@dimen/base_keyline"
            android:layout_marginTop="@dimen/base_keyline"
            android:headerBackground="?attr/colorPrimary" />

        <Button
            android:id="@+id/add_refuel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/base_keyline"
            android:layout_marginLeft="@dimen/base_keyline"
            android:layout_marginRight="@dimen/base_keyline"
            android:layout_marginTop="@dimen/base_keyline"
            android:onClick="addRefuel"
            android:text="@string/add_refuel" />

    </LinearLayout>
</ScrollView>
